--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -136,12 +136,15 @@ html {background-image:url("/images/darkgray.jpg");}
 
 .absolute {position:absolute;}
 #room_top {width:600px;height:120px;position:relative;}
-#room_bottom {width:600px;height:120px;position:relative;top:480px;}
+#room_bottom {width:600px;height:120px;position:relative;top:360px;}
 #room_right {border:1px solid #333;background-color:white;width:200px;height:598px;position:relative;left:600px;}
 #room_right h3 {padding:8px;font-size;14pt;background-color:#333;color:white;font-weight:bold;}
 #room_wrapper .room-user {border:1px solid #333;width:118px;height:118px;float:left;color:white;}
+#room_wrapper .room-user .room-user-kick {float:right;padding:5px;width:12px;font-size:10px;background-color:#a52a2a;text-align:center;color:white;cursor:pointer;}
+#room_wrapper .room-user .room-user-kick:hover {background-color:red;}
 #room_wrapper .room-user .room-nickname {font-size:16pt;text-align:center;margin:25px 0 10px 0;}
 #room_wrapper .room-user .room-cards {font-size:16pt;text-align:center;}
+#room_wrapper .room-user .room-user-uid {display:none;}
 #room_wrapper .ok-user {background-color:#444;}
 #room_wrapper .no-user {background-color:#111;}
 #room_wrapper .my-user {background-color:#444;color:red;}
@@ -177,8 +180,8 @@ html {background-image:url("/images/darkgray.jpg");}
 .taxation-card-set {position:absolute;}
 .selected-taxation-card {border:1px solid red;top:-30px;}
 #taxation_bottom {margin-top:230px;width:540px;position:relative;left:30px;height:40px;}
-#taxation_buttons {float:right;width:100px;height:40px;text-align:right;}
-#taxation_explain {float:left;width:410px;height:40px;font-size:13pt;line-height:130%;color:#ddd}
+#taxation_buttons {float:right;width:120px;height:40px;text-align:right;}
+#taxation_explain {float:left;width:410px;height:40px;font-size:12pt;line-height:130%;color:#ddd}
 #taxation_waiting {margin-left:30px;width:540px;margin-top:160px;text-align:center;font-size:20pt;color:#ddd}
 
 #room_timer_pcn {background-color:#666;height:50px;padding:8px;font-family:"Arial"}
@@ -186,6 +189,7 @@ html {background-image:url("/images/darkgray.jpg");}
 #room_timer .timer-text {float:left;30px;background-color:black;color:red;font-weight:bold;font-size:30px;text-align:center;padding:10px;}
 #room_previous_cards_number {float:left;margin-left:10px;}
 #room_previous_cards_number .pcn-text {float:left;30px;background-color:black;color:#00ff00;font-weight:bold;font-size:30px;text-align:center;padding:10px;}
+#room_turn_master {text-align:center;background-color:#666;height:20px;padding:10px;font-size:12pt;color:yellow;}
 
 .comment-div {font-size:16pt;position:relative;z-index:10001;text-align:center;color:#ffff00;}
 
@@ -200,3 +204,6 @@ html {background-image:url("/images/darkgray.jpg");}
 .howtoplay-card-container {width:20px;height:30px;float:left;}
 .howtoplay-cards {height:150px;margin-bottom:20px;}
 .howtoplay-cards2 {height:90px;margin-bottom:20px;}
+
+.room-player-list {position:relative;left:570px;background-color:#eee;border:1px solid #ddd;width:100px;padding:10px;line-height:120%;font-size:10pt;}
+.room-player-list h3 {font-weight:bold;}
