--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -187,13 +187,14 @@ html {background-image:url("/images/darkgray.jpg");}
 #taxation_explain {float:left;width:410px;height:40px;font-size:12pt;line-height:130%;color:#ddd}
 #taxation_waiting {margin-left:30px;width:540px;margin-top:160px;text-align:center;font-size:20pt;color:#ddd}
 
+#room_info {background-color:#666;}
 #room_timer_pcn {background-color:#666;height:50px;padding:8px;font-family:"Arial"}
 #room_timer {float:left;margin-left:10px;}
 #room_timer .timer-text {float:left;background-color:black;color:red;font-weight:bold;font-size:30px;text-align:center;padding:10px;}
 #room_previous_cards_number {float:left;margin-left:10px;}
 #room_previous_cards_number .pcn-text {float:left;background-color:black;color:#00ff00;font-weight:bold;font-size:30px;text-align:center;padding:10px;}
-#room_turn_master {text-align:center;background-color:#666;height:20px;padding:10px;font-size:12pt;color:yellow;}
-
+#room_turn_master {text-align:center;background-color:#666;height:20px;padding:5px;font-size:12pt;color:yellow;}
+#room_autopass {background-color:#666;text-align:center;padding:5px;}
 .comment-div {font-size:16pt;position:relative;z-index:10001;text-align:center;color:#ffff00;}
 
 #modal_howtoplay {padding:15px;}
